Added to previous commit with update library project assignment and attempt with Local Storage.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <div class="books">
             <div class="cards">
                 <div class="card">
-                    <div class="author"></div>
+                    <!-- <div class="author"></div>
                     <div class="title"></div>
                     <div class="pages"></div>
                     <div class="read-status"></div>
                     <div class="remove-button">X</div>
-                    <div class="change-status">Change</div>
+                    <div class="change-status">Change</div> -->
                 </div>
             </div>
         </div>
@@ -33,7 +33,9 @@
         <!-- <div class="button">ADD A NEW BOOK</div> -->
         <button class="button">ADD A NEW BOOK</button>
     </div>
-    <script src="js/index.js"></script>
+    <!-- <script src="js/index.js"></script> -->
+    <!-- <script src="js/index02.js"></script> -->
+    <script src="js/withLocalStorage.js"></script>
 </body>
 
 </html>
