Added to previous commit wth update on project library assignment with local storage, need some more attention for DOM redraing after each insertion without have to refresh page to do so.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <header>Project: Library</header>
         <div class="books">
             <div class="cards">
-                <div class="card">
-                    <!-- <div class="author"></div>
+                <!-- <div class="card">
+                    <div class="author"></div>
                     <div class="title"></div>
                     <div class="pages"></div>
                     <div class="read-status"></div>
-                    <div class="remove-button">X</div>
-                    <div class="change-status">Change</div> -->
-                </div>
+                    <div class="remove-button"></div>
+                    <div class="change-status"></div>
+                </div> -->
             </div>
         </div>
         <form id="form" hidden>
