Added to previous commit recent update with Book Library Project assignment with Local Storage.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     </div>
     <!-- <script src="js/index.js"></script> -->
     <!-- <script src="js/index02.js"></script> -->
-    <script src="js/withLocalStorage.js"></script>
+    <!-- <script src="js/withLocalStorage.js"></script> -->
+    <script src="js/withLocalStorage02.js"></script>
 </body>
 
 </html>
