Added to previous commit with recently updated code base for Library Project for both using Array and Local Storage and now currently looking into do it using Firebase for cloud based database support.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,28 @@
     <!-- <script src="js/index.js"></script> -->
     <!-- <script src="js/index02.js"></script> -->
     <!-- <script src="js/withLocalStorage.js"></script> -->
-    <script src="js/withLocalStorage02.js"></script>
+    <!-- <script src="js/withLocalStorage02.js"></script> -->
+    <script src="js/anotherLS.js"></script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyAvu938r5h51c41fUYSu-GKwMxAOsZFTNA",
+            authDomain: "libraryassignment-18f3a.firebaseapp.com",
+            projectId: "libraryassignment-18f3a",
+            storageBucket: "libraryassignment-18f3a.appspot.com",
+            messagingSenderId: "608057700737",
+            appId: "1:608057700737:web:295026c92ae394f1ffb880"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+    </script>
 </body>
 
 </html>
