Added to previous commit updated with Class construct.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <!-- <script src="js/withLocalStorage.js"></script> -->
     <!-- <script src="js/withLocalStorage02.js"></script> -->
     <!-- <script src="js/anotherLS.js"></script> -->
-    <script src="js/withFirebase.js"></script>
+    <!-- <script src="js/withFirebase.js"></script> -->
+    <script src="js/usingClass/usingArray.js"></script>
 </body>
 
 </html>
